--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pydantic>=2.12.5",
     "pygame>=2.6.1",
     "pyyaml>=6.0.3",
+    "watchdog>=6.0.0",
 ]
 
 [tool.ruff]
