--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,5 @@
     "editor.detectIndentation": false,
     "editor.defaultFormatter": "charliermarsh.ruff"
   },
-  "isort.args": [
-    "--profile",
-    "black"
-  ],
+  "cSpell.enabled": false
 }
